added .idea/ to gitignore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_location">Map</string>
     <string name="close">Close</string>
-    <string name="enter_details">Enter Reminder Title</string>
+    <string name="enter_details">Set a reminder</string>
     <string name="reminder">Add title</string>
     <string name="button_clear">Clear</string>
     <string name="add_submit">Add</string>
