--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="add_submit">Add</string>
     <string name="exit">Exit</string>
     <string name="set_location_txt">Set Location</string>
+    <string name="title_activity_home_page">HomePage</string>
+    <string name="title_activity_location_tracker">locationTracker</string>
 </resources>
