improved homepage ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="exit">Exit</string>
     <string name="set_location_txt">Set Location</string>
     <string name="title_activity_home_page">HomePage</string>
-    <string name="title_activity_location_tracker">locationTracker</string>
+    <string name="location_tracker">Location Tracker</string>
+    <string name="location_reminder">Location Reminder</string>
 </resources>
