--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="title_activity_home_page">HomePage</string>
     <string name="location_tracker">Location Tracker</string>
     <string name="location_reminder">Location Reminder</string>
+    <string name="prompt_username">Username</string>
+    <string name="action_sign_up">New user ?  Register</string>
+    <string name="action_sign_in">Existing user ?  Login</string>
+    <string name="khojak_logo">khojak logo</string>
+
 </resources>
