--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,8 @@
     <string name="empty_field_error">Field cannot be empty</string>
     <string name="done">Done</string>
     <string name="add_member">Add member</string>
+    <string name="username_error">User does not exist! Please register</string>
+    <string name="username_required">Username required</string>
+    <string name="duplicate_user">User with this username already exists! Please login</string>
+
 </resources>
