--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="username_error">User does not exist! Please register</string>
     <string name="username_required">Username required</string>
     <string name="duplicate_user">User with this username already exists! Please login</string>
+    <string name="groups">Groups :</string>
 
 </resources>
