--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="username_required">Username required</string>
     <string name="duplicate_user">User with this username already exists! Please login</string>
     <string name="groups">Groups :</string>
+    <string name="no_groups_created">No groups created</string>
 
 </resources>
