added recycler view for pending requests

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
         <item>Work</item>
         <item>Custom</item>
     </string-array>
+    <string name="title_activity_pending_requests">Pending Requests</string>
 
 
 </resources>
