--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="location_tracker">Location Tracker</string>
     <string name="location_reminder">Location Reminder</string>
     <string name="app_id">khojak-gdxut</string>
-    <string name="prompt_username">Username</string>
+    <string name="prompt_username">Username (case sensitive)</string>
     <string name="action_sign_up">New user ?  Register</string>
     <string name="action_sign_in">Existing user ?  Login</string>
     <string name="khojak_logo">khojak logo</string>
